Fixed landscape on small devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -97,6 +97,7 @@ body {
 /* Game Appearance */
 .count {
     color: white;
+    text-shadow: 0.05em 0.05em black;
 }
 
 .card-button {
@@ -127,6 +128,8 @@ body {
     background: linear-gradient(to bottom, white, snow);
     position: absolute;
     box-shadow: 3px 3px 2px black;
+    display: table;
+    overflow: hidden;
 }
 
 .player-card {
@@ -172,11 +175,18 @@ body {
     height: 3.5em;
 }
 
+.player-name-limited-height {
+    margin-top: 5px;
+}
+
 
 /* Card Designs */
 /* Modified from http://lea.verou.me/css3patterns/#marrakesh */
 .card-back {
     background-size: 1em 1em;
+    color: white;
+    -webkit-text-stroke: black 0.04em;
+    text-shadow: 0.1em 0.1em black;
 }
 
 .card-ornate {
